--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
-    "@react-navigation/native": "^5.7.5",
+    "@react-navigation/bottom-tabs": "^5.9.2",
+    "@react-navigation/drawer": "^5.9.3",
+    "@react-navigation/material-bottom-tabs": "^5.2.19",
+    "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.2",
     "axios": "^0.20.0",
     "body-parser": "^1.19.0",
@@ -23,14 +26,18 @@
     "gh-pages": "^3.1.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
+    "native-base": "^2.13.14",
     "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-paper": "^4.2.0",
     "react-native-reanimated": "^1.13.1",
     "react-native-router-flux": "^4.2.0",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
-    "sequelize": "^6.3.5"
+    "react-native-vector-icons": "^7.1.0",
+    "sequelize": "^6.3.5",
+    "sqlite3": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
