--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^5.9.2",
     "@react-navigation/drawer": "^5.9.3",
     "@react-navigation/material-bottom-tabs": "^5.2.19",
+    "@react-navigation/material-top-tabs": "^5.3.0",
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.2",
     "axios": "^0.20.0",
@@ -35,6 +36,7 @@
     "react-native-router-flux": "^4.2.0",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
+    "react-native-tab-view": "^2.15.2",
     "react-native-vector-icons": "^7.1.0",
     "sequelize": "^6.3.5",
     "sqlite3": "^5.0.0"
