--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-screens": "^2.11.0",
     "react-native-tab-view": "^2.15.2",
     "react-native-vector-icons": "^7.1.0",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "sequelize": "^6.3.5",
     "sqlite3": "^5.0.0"
   },
