--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-image-crop-picker": "^0.35.1",
     "react-native-paper": "^4.2.0",
     "react-native-reanimated": "^1.13.1",
     "react-native-router-flux": "^4.2.0",
