--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-router-flux": "^4.2.0",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^2.15.2",
     "react-native-vector-icons": "^7.1.0",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
