--- a/ios/Podfile
+++ b/ios/Podfile
@@ -10,6 +10,8 @@ target 'SwasthHindustan' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'BVLinearGradient', :path => '../node_modules/react-native-linear-gradient'
+
   target 'SwasthHindustanTests' do
     inherit! :complete
     # Pods for testing
