--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native": "0.63.3",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-image-crop-picker": "^0.35.1",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^4.2.0",
     "react-native-reanimated": "^1.13.1",
     "react-native-router-flux": "^4.2.0",
