--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "native-base": "^2.13.14",
     "react": "16.13.1",
     "react-native": "0.63.3",
+    "react-native-credit-card-display": "^0.3.4",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-image-crop-picker": "^0.35.1",
     "react-native-linear-gradient": "^2.5.6",
@@ -40,6 +41,7 @@
     "react-native-router-flux": "^4.2.0",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^2.15.2",
     "react-native-vector-icons": "^7.1.0",
